<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">BBTH</string>
	
	<string name="on">ON</string>
	<string name="off">OFF</string>
	
	<string name="disconnected">Disconnected</string>
	<string name="enablebluetooth">Enabling Bluetooth...</string>
	<string name="checkpreviousconnection">Checking previous connection...</string>
	<string name="getnearbydevices">Finding all nearby devices... (Found %1$d)</string>
	<string name="connecting">Connecting to \"%1$s\"...</string>
	<string name="listenforconnections">Listening for connections...</string>
	<string name="connected">Connected</string>
	<string name="tellotherplayertoconnectto">Tell other player\nto connect to \"%1$s\"</string>
	
	<string name="defaultachievementname">&lt;unnamed&gt;</string>
	<string name="defaultachievementdesc">&lt;no description&gt;</string>
	<string name="achievementunlocked">ACHIEVEMENT UNLOCKED</string>
	
	<string name="calibratesound">Calibrate Audio</string>
	<string name="calibrationexplanation">Drag the slider to sync the beat track to the right with the music.</string>
	<string name="calibrationlabel">Sound Delay</string>
	
	<string name="resetallachievementdata">Reset all achievement data?</string>
	<string name="reset">Reset</string>
	<string name="cancel">Cancel</string>
	
	<string name="showtutorial">Show Tutorial</string>
	<string name="aidifficulty">AI Difficulty</string>
	<string name="titlescreenmusic">Menu Screen Music</string>
	<string name="resetachievements">Reset Achievements</string>
	
	<string name="singleplayer">Single Player</string>
	<string name="multiplayer">Multiplayer</string>
	<string name="achievements">Achievements</string>
	<string name="settings">Settings</string>
	
	<string name="createagame">Create a Game</string>
	<string name="joinagame">Join a Game</string>
	
	<string name="playagain">Play Again</string>
	<string name="mainmenu">Main Menu</string>
	
	<string name="itsatie">It\'s a tie!</string>
	<string name="toobadyoulose">Too bad, you lose.</string>
	<string name="congratulationsyouwin">Congratulations! You win!</string>
	<string name="youhavebeendisconnected">You have been disconnected.</string>
	
	<string name="songselection">Song Selection</string>
	
	<string name="waitingforotherplayer">Waiting for other player...</string>
	
	<string name="tapfurtherrighttomakeunits_1">Tap further right </string>
	<string name="tapfurtherrighttomakeunits_2">to make units!</string>
	<string name="tapinsideyourzoneofinfluence_1">Tap inside your zone of </string>
	<string name="tapinsideyourzoneofinfluence_2">influence to make units!</string>
	<string name="dragfingerfurthertodrawlongerwall_1">Drag finger further </string>
	<string name="dragfingerfurthertodrawlongerwall_2">to draw a longer wall!</string>
	
	<string name="notsynced">NOT SYNCED!</string>
	
	<string name="combomultiplier">x%1$d</string>
	<string name="combouberunit">COMBO %1$s: ÜBER UNIT!</string>
	
	<string name="refresh">Refresh</string>
	<string name="gamebrowser">Game Browser</string>
	
	<string name="yourhealth">Your Health: %1$d</string>
	<string name="enemyhealth">Enemy Health: %1$d</string>
	
	<string name="ok">OK</string>
	<string name="skiptutorial">Skip Tutorial</string>
	
	<string name="tapfurtherrighttocreateaunit_1">Tap further right</string>
	<string name="tapfurtherrighttocreateaunit_2">to create a unit</string>
	<string name="whenthebeatisbetweentwolines_1">When the beat is between</string>
	<string name="whenthebeatisbetweentwolines_2">the two lines, tap on the</string>
	<string name="whenthebeatisbetweentwolines_3">grid to create a unit</string>
	<string name="yourunitstravelup_1">Your units travel up and the</string>
	<string name="yourunitstravelup_2">other player\'s units travel down</string>
	<string name="youcanonlyplaceunits_1">You can only place</string>
	<string name="youcanonlyplaceunits_2_red">units in the red area</string>
	<string name="youcanonlyplaceunits_2_blue">units in the blue area</string>
	<string name="youwinwhenyouropponentshealth_1">You win when your opponent\'s</string>
	<string name="youwinwhenyouropponentshealth_2">health reaches 0, or when the song</string>
	<string name="youwinwhenyouropponentshealth_3">ends and your health is higher</string>
	<string name="youneedtodragyourfingeraway_1">You need to drag your finger</string>
	<string name="youneedtodragyourfingeraway_2">away from where you tapped,</string>
	<string name="youneedtodragyourfingeraway_3">please try making a longer wall</string>
	<string name="unitstakelongertogoaroundwalls_1">Units take longer</string>
	<string name="unitstakelongertogoaroundwalls_2">to go around walls</string>
	<string name="tapfurtherrighttocreateawall_1">Tap further right</string>
	<string name="tapfurtherrighttocreateawall_2">to create a wall</string>
	<string name="whenabeathasatailyoucandrag_1">When a beat has a tail,</string>
	<string name="whenabeathasatailyoucandrag_2">you can drag on the</string>
	<string name="whenabeathasatailyoucandrag_3">grid to create a wall</string>
	<string name="havefunandgoodluck">Have fun and good luck!</string>
	
	<string name="song_retro">Retro</string>
	<string name="song_mistakethegetaway">Mistake the Getaway</string>
	<string name="song_javlasladdar">Javla Sladdar</string>
	<string name="song_odinskraft">Odin\'s Kraft</string>
	<string name="song_mightandmagic">Might and Magic</string>
	
	<!-- Achievements -->
	
	<string name="achievement_0_name">Escapist</string>
	<string name="achievement_1_name">Fantastic</string>
	<string name="achievement_2_name">Chiptune Enthusiast</string>
	<string name="achievement_3_name">Climbing the Sladdar</string>
	<string name="achievement_4_name">Crafty</string>
	<string name="achievement_100_name">Desperate Times</string>
	<string name="achievement_101_name">Desperate Measures</string>
	<string name="achievement_102_name">Ultimate Stalemate</string>
	<string name="achievement_103_name">Flawless Victory</string>
	<string name="achievement_104_name">Strategist</string>
	<string name="achievement_200_name">Why It\'s Better Not To Mash</string>
	<string name="achievement_201_name">Beat Wizard</string>
	<string name="achievement_202_name">Beat Master</string>
	<string name="achievement_203_name">Beat Spartan</string>
	<string name="achievement_204_name">Full Combo</string>
	<string name="achievement_400_name">The Horde</string>
	<string name="achievement_401_name">Humiliation</string>
	<string name="achievement_402_name">It\'s Super Effective!</string>
	<string name="achievement_403_name">Yo Dawg, I Heard You Like Units</string>
	<string name="achievement_404_name">Showdown</string>
	<string name="achievement_405_name">Quantity Over Quality</string>
	<string name="achievement_406_name">Fireworks</string>
	<string name="achievement_500_name">Anything You Can Do...</string>
	<string name="achievement_600_name">Murder</string>
	<string name="achievement_601_name">Genocide</string>
	<string name="achievement_602_name">I Am Become Death...</string>
	<string name="achievement_603_name">Builder</string>
	<string name="achievement_604_name">Creator</string>
	<string name="achievement_605_name">Lifebringer</string>
	<string name="achievement_606_name">Overpowered</string>
	<string name="achievement_607_name">Powerhouse</string>
	<string name="achievement_608_name">Power Overwhelming</string>
	
	<string name="achievement_0_desc">Win \"Mistake the Getaway\" 10 times</string>
	<string name="achievement_1_desc">Win \"Might and Magic\" 10 times</string>
	<string name="achievement_2_desc">Win \"Retro\" 10 times</string>
	<string name="achievement_3_desc">Win \"Javla Sladder\" 10 times</string>
	<string name="achievement_4_desc">Win \"Odin\'s Craft\" 10 times</string>
	<string name="achievement_100_desc">Destroy your opponent\'s base when your base has less than 10 health remaining</string>
	<string name="achievement_101_desc">Destroy your opponent\'s base less than 10 seconds before the end of a song</string>
	<string name="achievement_102_desc">End a 2-minute+ long song in a tie</string>
	<string name="achievement_103_desc">Destroy your opponent\'s base without allowing your base to take any damage</string>
	<string name="achievement_104_desc">Win a game having created fewer units than your opponent</string>
	<string name="achievement_200_desc">Receive an Über unit</string>
	<string name="achievement_201_desc">Get a combo of 25 beats or more</string>
	<string name="achievement_202_desc">Get a combo of 100 beats or more</string>
	<string name="achievement_203_desc">Get a combo of 300 beats or more</string>
	<string name="achievement_204_desc">Get every beat (no mistaps or omissions) in a song</string>
	<string name="achievement_400_desc">Have over 25 of your units on the screen at once</string>
	<string name="achievement_401_desc">Spawn a unit less than 10 pixels from your opponent\'s base</string>
	<string name="achievement_402_desc">Kill four or more enemy units with a single explosion of one of your units</string>
	<string name="achievement_403_desc">Spawn a unit on top of an enemy unit</string>
	<string name="achievement_404_desc">Kill an enemy Über unit with an Über unit of your own</string>
	<string name="achievement_405_desc">Kill an enemy Über unit without an Über unit of your own damaging it</string>
	<string name="achievement_406_desc">Witness the destruction of 10 units in under a second</string>
	<string name="achievement_500_desc">Win a game against the hardest possible AI</string>
	<string name="achievement_600_desc">Kill 500 enemy units</string>
	<string name="achievement_601_desc">Kill 10000 enemy units</string>
	<string name="achievement_602_desc">Kill 200000 enemy units</string>
	<string name="achievement_603_desc">Spawn 1000 units</string>
	<string name="achievement_604_desc">Spawn 20000 units</string>
	<string name="achievement_605_desc">Spawn 400000 units</string>
	<string name="achievement_606_desc">Spawn 200 Über units</string>
	<string name="achievement_607_desc">Spawn 500 Über units</string>
	<string name="achievement_608_desc">Spawn 1500 Über units</string>
	
</resources>
